fluent-syntax/test/fixtures_behavior/second-tag-starts-from-nl.ftl
key = Value
    #tag
#tag2
//~ ERROR E0002, pos 21
